fixed overlap

--- a/src/components/Tables/Tables.css
+++ b/src/components/Tables/Tables.css
@@ -121,6 +121,7 @@
   padding-top: 0px !important;
   padding-left: 14px;
   padding-bottom: 40px;
+  word-break: break-word;
 }
 
 .adrcontainer {
